--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am Shivam Chauhan, a Game Developer, UI/UX Designer & Web Developer with a keen eye for detail and a love for creating intuitive user experiences.</p>
+        <p> am Shivam Chauhan, a Game Developer, UI/UX Designer & Web Developer with a keen eye for detail and a love for creating intuitive user experiences.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -122,8 +122,7 @@
           <div class="col-lg-8 content">
             <h2>Game Developer &amp; Web Developer.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              I’m a passionate 3rd-year college student with skills in game development, web development, and graphic design. I enjoy creating interactive experiences, clean user interfaces, and visually appealing designs. I’m constantly learning and improving my craft, and I love working on projects that challenge my creativity and technical skills.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -131,7 +130,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 March 2003</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+917068529262</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Greater Noida, India</span></li>
+                  <li><i class="biI bi-chevron-right"></i> <strong>City:</strong> <span>Greater Noida, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -144,8 +143,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              I am a dedicated and creative developer with experience in web development, game development, and graphic design. I love turning ideas into functional and visually appealing digital products. Whether it's building a website, designing graphics, or developing a game, I always aim to deliver high-quality work. My goal is to grow professionally, work on innovative projects, and continue expanding my skillset.
             </p>
           </div>
         </div>
@@ -164,32 +162,32 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> <span>consequuntur quae</span></p>
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Clients</strong> <span>...</span></p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> <span>adipisci atque cum quia aut</span></p>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Projects Completed</strong> <span>..</span></p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> <span>aut commodi quaerat</span></p>
+              <span data-purecounter-start="0" data-purecounter-end="800" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Hours of Practice & Support</strong> <span>..</span></p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> <span>rerum asperiores dolor</span></p>
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Team Projects</strong> <span>..</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -274,7 +272,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>I am a passionate and dedicated 3rd-year undergraduate student specializing in web development, game development, and graphic design. I enjoy building creative digital experiences, solving problems through code, and designing clean, modern visuals. I am constantly learning and improving my skills through personal projects, college work, and online practice</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -285,49 +283,50 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Shivam Chauhan</h4>
+              <p><em>Aspiring Web & Game Developer with hands-on experience in developing small games, websites, and graphic design projects. Strong foundation in front-end development, Unity game development, and creative design tools. Skilled at working in teams, meeting deadlines, and learning new technologies quickly.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Greater Noida, India</li>
+                <li>(+91) 7068529262</li>
+                <li>chauhanshivam990@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor of Technology / Computer Science Engineering</h4>
+              <h5>2023 - Present</h5>
+              <p><em>GL Bajaj Institute of Technology and Management, Greater Noida, India</em></p>
+              <p>Currently pursuing an undergraduate degree with a focus on programming, digital design, and development.
+Relevant areas of study include web development, game design, UI/UX, and computer fundamentals.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <!-- <h4>Bachelor of Fine Arts &amp; Graphic Design</h4> -->
+              <!-- <h5>2010 - 2014</h5> -->
+              <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et </p> -->
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Professional /Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Freelance Designer & Experience</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Remote/Online/Greater Noida/Delhi NCR, India</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Designed logos, posters, and social media graphics for students and small businesses</li>
+                <li>Built small websites using HTML, CSS, JavaScript </li>
+                <li>Worked with classmates on group projects involving UI design and development</li>
+                <li>Improved client's design ideas and delivered clean, modern graphics</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
+              <h4>College Projects & Teamwork</h4>
+              <h5>2023 - Present</h5>
               <p><em>Stepping Stone Advertising, New York, NY</em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
@@ -536,8 +535,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Graphic Design</a></h4>
+              <p class="description">I create clean, modern, and visually appealing designs including logos, posters, banners, and social media graphics. I focus on creativity, clarity, and brand identity to deliver designs that stand out.</p>
             </div>
           </div>
           <!-- End Service Item -->
@@ -545,40 +544,40 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Web Development</a></h4>
+              <p class="description">I build responsive and user‑friendly websites using HTML, CSS, and JavaScript. My focus is on clean UI, smooth user experience, and optimized layouts suitable for personal brands, portfolios, and small businesses.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Game Development</a></h4>
+              <p class="description">I develop simple 2D & 3D games using Unity. I work on player mechanics, level design, UI, and game logic to create engaging and interactive experiences</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">UI/UX Design</a></h4>
+              <p class="description">I design intuitive and visually consistent user interfaces for websites and apps. My designs are based on usability, modern styles, and smooth interaction flow</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Branding & Visual Identity</a></h4>
+              <p class="description">I help create cohesive brand identities through logos, color schemes, typography, and visual guidelines that communicate your brand’s values and personality effectively.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Project Assistance & Collaboration</a></h4>
+              <p class="description">I assist students and small teams with design ideas, coding help, game prototypes, and development tasks. I enjoy collaborating and bringing creative ideas to life</p>
             </div>
           </div><!-- End Service Item -->
 
