--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Shivam Chauhan</h2>
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Game Developer, Animator">Game Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -110,7 +110,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p> am Shivam Chauhan, a Game Developer, UI/UX Designer & Web Developer with a keen eye for detail and a love for creating intuitive user experiences.</p>
+        <p>I am Shivam Chauhan, a Game Developer, UI/UX Designer & Web Developer with a keen eye for detail and a love for creating intuitive user experiences.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -143,7 +143,7 @@
               </div>
             </div>
             <p class="py-3">
-              I am a dedicated and creative developer with experience in web development, game development, and graphic design. I love turning ideas into functional and visually appealing digital products. Whether it's building a website, designing graphics, or developing a game, I always aim to deliver high-quality work. My goal is to grow professionally, work on innovative projects, and continue expanding my skillset.
+              A dedicated and creative developer with experience in web development, game development, and graphic design. I love turning ideas into functional and visually appealing digital products. Whether it's building a website, designing graphics, or developing a game, I always aim to deliver high-quality work. My goal is to grow professionally, work on innovative projects, and continue expanding my skillset.
             </p>
           </div>
         </div>
